k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: specterdefence
  labels:
    app.kubernetes.io/name: specterdefence
    app.kubernetes.io/part-of: specterdefence
